<resources>
    <string name="app_name" translatable="false">语聊房</string>
    <string name="alirtc_permission" translatable="false">请先申请权限</string>
    <string name="alirtc_audioliveroom_string_hint_channel_id" translatable="false">房间号</string>
    <string name="alirtc_audioliveroom_string_btn_join_channel" translatable="false">进入语聊房</string>
    <string name="alirtc_audioliveroom_string_hint_double_click" translatable="false">请不要重复点击</string>
    <string name="alirtc_audioliveroom_string_hint_join_room_faild" translatable="false">加入房间失败，请重试</string>
    <string name="alirtc_audioliveroom_string_join_channel_error" translatable="false">加入房间失败，%1$s</string>
    <string name="alirtc_audioliveroom_string_data_parse_error" translatable="false">数据解析失败</string>
    <string name="alirtc_audioliveroom_string_userinfo_empty" translatable="false">获取用户信息失败，请退出重试</string>
    <string name="alirtc_audioliveroom_string_loading_join_channel" translatable="false">加载中</string>
    <string name="alirtc_audioliveroom_string_network_conn_error" translatable="false">网络请求失败，请检查您的网络设置</string>
    <string name="alirtc_audioliveroom_string_error_student_name_empty" translatable="false">请输入5位房间号</string>
    <string name="alirtc_audioliveroom_string_set_client_student_role_success" translatable="false">下麦成功</string>
    <string name="alirtc_audioliveroom_string_set_client_teacher_role_success" translatable="false">上麦成功</string>
    <string name="alirtc_audioliveroom_string_title_channel_id" translatable="false">教室编号：%1$s</string>
    <string name="alirtc_audioliveroom_string_title_menu_leavel_channel" translatable="false">退出课程</string>
    <string name="alirtc_audioliveroom_string_leave_channel" translatable="false">离开房间</string>
    <string name="alirtc_audioliveroom_string_hint_leave_channel" translatable="false">离开房间后\n还可通过房间号加入</string>
    <string name="alirtc_audioliveroom_string_confirm_leave_channel" translatable="false">确认离开</string>
    <string name="alirtc_audioliveroom_string_continue_to_experience" translatable="false">暂不离开</string>
    <string name="alirtc_audioliveroom_string_error_set_client_teacher_role" translatable="false">上麦失败</string>
    <string name="alirtc_audioliveroom_string_error_set_client_student_role" translatable="false">下麦失败</string>
    <string name="alirtc_audioliveroom_string_title_dialog_tip" translatable="false">提示</string>
    <string name="alirtc_audioliveroom_string_error_rtc_normal" translatable="false">系统错误，请点击确定退出</string>
    <string name="alirtc_audioliveroom_string_confrim_btn" translatable="false">确认</string>
    <string name="alirtc_audioliveroom_string_teacher_is_offline" translatable="false">老师未上线，请退出重试</string>
    <string name="alirtc_audioliveroom_string_teacher_is_leavel_room" translatable="false">老师已退出房间</string>
    <string name="alirtc_audioliveroom_string_need_set_teacher_role" translatable="false">需上麦后才可进行本操作</string>
    <string name="alirtc_audioliveroom_string_unmute_mic" translatable="false">取消静音</string>
    <string name="alirtc_audioliveroom_string_open_camera" translatable="false">开启摄像头</string>
    <string name="alirtc_audioliveroom_string_unconn_mic" translatable="false">下麦</string>
    <string name="alirtc_audioliveroom_string_mute_mic" translatable="false">静音</string>
    <string name="alirtc_audioliveroom_string_camera" translatable="false">摄像头</string>
    <string name="alirtc_audioliveroom_string_conn_mic" translatable="false">上麦</string>
    <string name="alirtc_audioliveroom_string_rotate_camera" translatable="false">翻转</string>
    <string name="alirtc_audioliveroom_string_home_title" translatable="false">语音聊天室</string>
    <string name="alirtc_audioliveroom_string_username" translatable="false">昵称</string>
    <string name="alirtc_audioliveroom_string_hint_role" translatable="false">角色</string>
    <string name="alirtc_audioliveroom_string_hint_interactive_role" translatable="false">进入时自动上麦</string>
    <string name="alirtc_audioliveroom_string_interactive_role" translatable="false">互动角色</string>
    <string name="alirtc_audioliveroom_string_hint_live_role" translatable="false">旁观，可随时上麦</string>
    <string name="alirtc_audioliveroom_string_live_role" translatable="false">观众</string>
    <string name="alirtc_audioliveroom_string_rtc" translatable="false">音视频通讯</string>
    <string name="alirtc_audioliveroom_string_channel_id_tv" translatable="false">房间号：%1$s</string>
    <string name="alirtc_audioliveroom_string_copy_success" translatable="false">房间号已复制</string>
    <string name="alirtc_audioliverooms_string_copy_faild" translatable="false">复制失败</string>
    <string name="alirtc_audioliveroom_string_username_normal" translatable="false">%1$d号麦</string>
    <string name="alirtc_audioliveroom_string_earback" translatable="false">耳返</string>
    <string name="alirtc_audioliveroom_string_switch_open" translatable="false">开启</string>
    <string name="alirtc_audioliveroom_string_switch_close" translatable="false">关闭</string>
    <string name="alirtc_audioliveroom_string_effect_reverb" translatable="false">混响</string>
    <string name="alirtc_audioliveroom_string_experienc_time" translatable="false">您的欢乐体验时长为10分钟</string>
    <string name="alirtc_audioliveroom_string_experience_time_out" translatable="false">体验时间已到</string>
    <string name="alirtc_audioliveroom_string_experience_time_out_please_try_angin" translatable="false">您的本次体验时长已满\n如需再次体验，请重新创建通话</string>
    <string name="alirtc_audioliveroom_string_know" translatable="false">我知道了</string>
    <string name="alirtc_audioliveroom_string_mute_mic_enable" translatable="false">静音模式已开启</string>
    <string name="alirtc_audioliveroom_string_mute_mic_unenable" translatable="false">静音模式已取消</string>
    <string name="alirtc_audioliveroom_string_speaker_phone_enable" translatable="false">本地静音已开启</string>
    <string name="alirtc_audioliveroom_string_speaker_phone_unenable" translatable="false">本地静音已关闭</string>
    <string name="alirtc_audioliveroom_string_network_bad" translatable="false">网络不佳</string>
    <string name="alirtc_audioliveroom_string_remote_user_network_bad" translatable="false">对方网络不佳</string>
    <string name="alirtc_audioliveroom_string_channel_user_num_empty" translatable="false">上麦人数已满\n请稍后</string>
    <string name="alirtc_audioliveroom_string_enable_all_remote_audio" translatable="false">开启声音</string>
    <string name="alirtc_audioliveroom_string_unenable_all_remote_audio" translatable="false">关闭声音</string>
    <string name="alirtc_audioliveroom_string_hint_username" translatable="false">请输入昵称</string>
    <string name="alirtc_audioliveroom_string_load_channel_id_error" translatable="false">自动获取房间号失败，%1$s</string>
    <string name="alirtc_audioliveroom_string_effect_change" translatable="false">变声</string>
    <string name="alirtc_audioliveroom_string_load_channel_user_num_error" translatable="false">获取房间上麦人数失败</string>

</resources>
